--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h1 {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
+  z-index: 1; /* המספר יהיה מתחת לכפתור */
 }
 
 .between {
@@ -80,6 +81,7 @@ h1 {
   position: absolute;
   top: 2rem;
   left: 2rem;
+  z-index: 10; /* הכפתור מעל המספר */
 }
 
 .guess {
@@ -116,4 +118,16 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+.win-image {
+  width: 200px;
+  margin-top: 20px;
+   margin-left: 300px; 
+  border-radius: 10px;
+  transition: opacity 0.5s ease;
+}
+
+.hidden {
+  opacity: 0;
+  display: none;
 }
